[gd_scene load_steps=16 format=3 uid="uid://c2p71hryj44ue"]

[ext_resource type="Texture2D" uid="uid://dsd68bwfdqoey" path="res://assets/TempAssets/Backgrounds/forest_background.png" id="1_17onk"]
[ext_resource type="Texture2D" uid="uid://b6hm1uumku3tx" path="res://assets/PNG/buttonRound_brown.png" id="1_mbfjw"]
[ext_resource type="Script" path="res://Scenes/Combat/combat.gd" id="1_wn64j"]
[ext_resource type="Texture2D" uid="uid://2j6w42pwmb1p" path="res://assets/TempAssets/Player/ambatekkom_player.png" id="2_dioli"]
[ext_resource type="Texture2D" uid="uid://bs6hwsctd6024" path="res://assets/PNG/arrowBeige_right.png" id="2_nvlwr"]
[ext_resource type="Texture2D" uid="uid://c55x4ffalvnwr" path="res://assets/PNG/buttonRound_beige.png" id="3_mc2mg"]
[ext_resource type="Texture2D" uid="uid://c737qo2yg6nev" path="res://assets/PNG/cursorSword_silver.png" id="4_fsosx"]
[ext_resource type="Texture2D" uid="uid://dxxidunf2sqmr" path="res://assets/PNG/cursorHand_grey.png" id="6_kvm2m"]
[ext_resource type="Texture2D" uid="uid://kjwvu4nyrsiw" path="res://assets/PNG/custom/shield_grey.png" id="7_b4m8e"]
[ext_resource type="AudioStream" uid="uid://ft17gsj86oab" path="res://assets/Sounds/switch-a.ogg" id="8_sc2uk"]
[ext_resource type="Texture2D" uid="uid://em38aesow7ux" path="res://assets/PNG/barRed_horizontalMid.png" id="9_do8f5"]
[ext_resource type="LabelSettings" uid="uid://dvfj7c3m625nj" path="res://Scenes/Combat/status.tres" id="9_stgyv"]
[ext_resource type="Texture2D" uid="uid://ttmfypw4m1cw" path="res://assets/PNG/buttonSquare_brown_pressed.png" id="10_hbyqc"]
[ext_resource type="Texture2D" uid="uid://g84s1uyt3242" path="res://assets/PNG/panel_brown.png" id="12_qu0gi"]
[ext_resource type="AudioStream" uid="uid://cvnepp6wxygk3" path="res://assets/TempAssets/Musics/fnaf_world_combat.mp3" id="15_5rlui"]

[node name="Combat" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wn64j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CombatBackground" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(200, 136)
scale = Vector2(0.5, 0.566667)
texture = ExtResource("1_17onk")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(60, 188)
scale = Vector2(2, 2)
texture = ExtResource("2_dioli")
hframes = 4
vframes = 4
frame = 12

[node name="PlayerStatus" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 220.0
offset_right = 96.0
offset_bottom = 252.0
texture = ExtResource("10_hbyqc")

[node name="Label" type="Label" parent="CanvasLayer/PlayerStatus"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.17
anchor_right = 0.067
anchor_bottom = 0.17
offset_left = 10.64
offset_top = -4.44
offset_right = 183.64
offset_bottom = 30.56
scale = Vector2(0.29, 0.415)
text = "<username>"
label_settings = ExtResource("9_stgyv")

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/PlayerStatus"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 69.0
offset_bottom = 26.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("9_do8f5")

[node name="PlayerStatus2" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 224.0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 80.0
texture = ExtResource("10_hbyqc")

[node name="Label" type="Label" parent="CanvasLayer/PlayerStatus2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.17
anchor_right = 0.067
anchor_bottom = 0.17
offset_left = 10.64
offset_top = -4.44
offset_right = 183.64
offset_bottom = 30.56
scale = Vector2(0.29, 0.415)
text = "<username>"
label_settings = ExtResource("9_stgyv")

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/PlayerStatus2"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 69.0
offset_bottom = 26.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("9_do8f5")

[node name="CombatMenu" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 1.007
anchor_top = 0.983
anchor_right = 1.007
anchor_bottom = 0.983
offset_left = -79.8
offset_top = -79.58
offset_right = -39.8
offset_bottom = -39.58
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3.985, 3.985)
texture = ExtResource("1_mbfjw")

[node name="MenuUpButton" type="TextureButton" parent="CanvasLayer/CombatMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.143
anchor_top = 0.075
anchor_right = -0.143
anchor_bottom = 0.075
offset_left = -3.76487
offset_top = 3.86836
offset_right = 18.2351
offset_bottom = 24.8683
rotation = -1.5708
scale = Vector2(0.35, 0.35)
action_mode = 0
texture_normal = ExtResource("2_nvlwr")

[node name="MenuDownButton" type="TextureButton" parent="CanvasLayer/CombatMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.147
anchor_top = 0.372
anchor_right = -0.147
anchor_bottom = 0.372
offset_left = 3.67231
offset_top = -3.84157
offset_right = 25.6723
offset_bottom = 17.1585
rotation = -4.71239
scale = Vector2(0.35, 0.35)
action_mode = 0
texture_normal = ExtResource("2_nvlwr")

[node name="MenuAttackButton" type="TextureButton" parent="CanvasLayer/CombatMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267
anchor_top = 0.23
anchor_right = 0.267
anchor_bottom = 0.23
offset_left = 6.81797
offset_top = -7.72821
offset_right = 41.818
offset_bottom = 30.2718
rotation = -4.71239
scale = Vector2(0.45, 0.45)
action_mode = 0
texture_normal = ExtResource("3_mc2mg")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/CombatMenu/MenuAttackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.14169
offset_top = -10.6417
offset_right = 30.8583
offset_bottom = 29.3583
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.44, 0.44)
texture = ExtResource("4_fsosx")

[node name="MenuItemButton" type="TextureButton" parent="CanvasLayer/CombatMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267
anchor_top = 0.23
anchor_right = 0.267
anchor_bottom = 0.23
offset_left = 6.81797
offset_top = -7.72821
offset_right = 41.818
offset_bottom = 30.2718
rotation = -4.71239
scale = Vector2(0.45, 0.45)
action_mode = 0
texture_normal = ExtResource("3_mc2mg")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/CombatMenu/MenuItemButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.14169
offset_top = -10.6417
offset_right = 30.8583
offset_bottom = 29.3583
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.44, 0.44)
texture = ExtResource("6_kvm2m")

[node name="MenuBlockButton" type="TextureButton" parent="CanvasLayer/CombatMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267
anchor_top = 0.23
anchor_right = 0.267
anchor_bottom = 0.23
offset_left = 6.81797
offset_top = -7.72821
offset_right = 41.818
offset_bottom = 30.2718
rotation = -4.71239
scale = Vector2(0.45, 0.45)
action_mode = 0
texture_normal = ExtResource("3_mc2mg")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/CombatMenu/MenuBlockButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.59662
offset_top = 7.1652
offset_right = 31.4034
offset_bottom = 47.1652
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
scale = Vector2(0.44, 0.44)
texture = ExtResource("7_b4m8e")

[node name="SwitchSound" type="AudioStreamPlayer" parent="CanvasLayer/CombatMenu"]
stream = ExtResource("8_sc2uk")

[node name="MenuItemSelect" type="NinePatchRect" parent="CanvasLayer/CombatMenu"]
layout_mode = 0
offset_left = -42.5184
offset_top = 0.245299
offset_right = -13.5184
offset_bottom = 18.2453
texture = ExtResource("12_qu0gi")

[node name="Label" type="Label" parent="CanvasLayer/CombatMenu/MenuItemSelect"]
layout_mode = 1
offset_left = 2.04415
offset_top = 0.817662
offset_right = 76.0442
offset_bottom = 22.8177
scale = Vector2(0.22, 0.22)
text = "Use items"
label_settings = ExtResource("9_stgyv")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_5rlui")

[connection signal="pressed" from="CanvasLayer/CombatMenu/MenuUpButton" to="." method="_on_menu_up_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CombatMenu/MenuDownButton" to="." method="_on_menu_down_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CombatMenu/MenuItemButton" to="." method="_on_menu_item_button_pressed"]
